# cmbagent_lg

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
cmbagent_lg/: __init__.py  cli.py  context.py  graph.py  llms.py  nodes.py  ocr.py  persistence.py  prompt_utils.py  prompts.py  state.py  timing.py  tracing.py
cmbagent_lg/adaptive_planning/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
cmbagent_lg/deep_research/: __init__.py  graph.py  nodes.py  state.py
cmbagent_lg/planning/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
cmbagent_lg/planning/templates/: plan_reviewer.yaml  planner.yaml
cmbagent_lg/researcher/: __init__.py  graph.py  nodes.py  prompts.py  state.py
cmbagent_lg/researcher/templates/: researcher.yaml  (+1 more)
cmbagent_lg/self_debug/: __init__.py  escalation.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
cmbagent_lg/templates/: plan_reviewer.yaml
cmbagent_lg/vlm/: __init__.py  images.py  reviewer.py
docs/: index.html  pelicano_claimmap_2d.html  pelicano_claimmap_3d.html
examples/: _common.py  eval_demo.py  ocr_rag_demo.py  react_demo.py  run_deep_research.py  run_deep_research_researcher.py  run_deep_research_simple.py  run_planner_review.py  run_self_debug.py  run_self_debug_csv_plot.py  run_self_debug_data_dictionary.py  run_self_debug_escalation.py  run_self_debug_lorenz.py  run_self_debug_retry.py  smoke_test_keys.py  trace_cost_summary.py
teaching/: .gitignore  deep_research.dot  gen_excalidraw.py  react_and_deep_research.excalidraw  react_lesson.md  react_loop.dot
(+4 files in other folders)
